maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:4: error: not found: value a
    a=random3()
    ^RandomMouseMaze:5: error: not found: value a
    a match {
    ^